--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.17.12",
+    "@material-tailwind/react": "^2.1.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "react-icons": "^4.12.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "tailwindcss-filters": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
