--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
+    "framer-motion": "^11.2.12",
     "notistack": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
+    "react-lottie": "^1.2.4",
+    "react-responsive": "^10.0.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "tailwindcss-filters": "^3.0.0",
