--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "framer-motion": "^11.2.12",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
@@ -17,9 +18,12 @@
     "react-icons": "^4.12.0",
     "react-lottie": "^1.2.4",
     "react-responsive": "^10.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "tailwindcss-filters": "^3.0.0",
+    "vite": "^5.3.3",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^4.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
