delete 37 files and update 5 files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "cSpell.words": [
-        "Panth",
-        "taskticker"
-    ]
+    "search.useGlobalIgnoreFiles": true,
+    "search.useParentIgnoreFiles": true
 }
